css/styles.css
/* ... */
/* Responsive design pour la modale */
@media (max-width: 768px) {
  .modal-content {
    width: 90%;
    padding: 1.5rem;
    margin: 10% auto;
  }

  .buttons-container {
    flex-direction: column;
    gap: 0.5rem;
  }

  .project-card .buttons-container .btn {
    width: 100%;
  }
}



/*  */
.container {
  position: relative;
  width: 100%;
  min-height: 100%;
  padding: 10px;
}

.container .main-title {
  max-width: 700px;
  margin: 15px auto;
  text-align: center;
}

.container .main-title h2 {
  position: relative;
  font-size: 35px;
  margin-bottom: 90px;
  display: inline-block;
}

.container .main-title h2::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 1px;
  top: 125%;
  left: 0;
}

.container .main-title h2::after {
  content: "";
  position: absolute;
  width: 50%;
  height: 3px;
  background-color: var(--accent-color);
  top: calc(125% - 1px);
  left: 50%;
  transform: translateX(-50%);
}

.container .row {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.row .col {
  flex-basis: 100%;
  margin: 30px;
}

.row .sub-title h2 {
  position: relative;
  font-size: 22px;
  font-family: "Manrope", serif;
  display: inline-block;
  margin-bottom: 70px;
}

.row .sub-title h2::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 1px;
  top: 125%;
  left: 0;
}

.row .sub-title h2::after {
  content: "";
  position: absolute;
  width: 25%;
  height: 3px;
  top: calc(125% - 1px);
  left: 0;
  background-color: var(--accent-color);
}

.subject {
  font-size: 16px;
  padding-bottom: 16px;
  letter-spacing: 2px;
  font-family: "IBM Plex Mono", serif;
  font-weight: lighter;
}

.progress-bar {
  position: relative;
  width: 100%;
  height: 5px;
  background-color: #808080;
  border-radius: 15px;
  margin-bottom: 20px;
}

.progress-bar::after {
  position: absolute;
  content: attr(value);
  top: -35px;
  right: 0;
  color: var(--text-color);
  font-size: 18px;
}

.progress-line,
.tooltip {
  position: absolute;
  width: 0%;
  height: 7px;
  background-color: var(--accent-color);
  border-radius: 15px;
  top: -1px;
  animation: animate 1.5s cubic-bezier(1, 0.2, 0.2, 1) forwards;
}

@keyframes animate {
  100% {
    width: 100%;
  }
}

.progress-line::after {
  content: "";
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  top: 50%;
  left: 100%;
  transform: translate(-50%, -50%);
  background-color: var(--accent-color);
}

/* Skills Savoir-faire */
.skills {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 100px;
  max-width: 1200px;
  margin: 0 auto;
}

.skill p {
  margin-top: 15px;
  font-size: 16px;
  font-weight: 600;
  text-align: center;
}

.outer-circle {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
    -6px -6px 10px -1px rgba(255, 255, 255, 0.4);
  background: conic-gradient(var(--accent-color) 0deg, var(--progress-bg) 0deg);
  transition: background 0.5s ease;
}

.inner-circle {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--card-bg);
  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
    inset -4px -4px 6px -1px rgba(255, 255, 255, 0.5);
}

.inner-circle span {
  font-weight: 600;
  font-size: 24px;
  color: var(--text-color);
}

/* Styles pour une démo dans la page */
.theme-toggle {
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
  padding: 10px;
  background: var(--toggle-bg);
  border-radius: 20px;
  color: var(--text-color);
}

/* Centres d'intérêt */
.main-title {
  max-width: 700px;
  margin: 15px auto;
  text-align: center;
}

.main-title h2 {
  position: relative;
  font-size: 35px;
  margin-bottom: 90px;
  display: inline-block;
}

.main-title h2::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 1px;
  top: 125%;
  left: 0;
}

.main-title h2::after {
  content: "";
  position: absolute;
  width: 50%;
  height: 3px;
  background-color: var(--accent-color);
  top: calc(125% - 1px);
  left: 50%;
  transform: translateX(-50%);
}

.grid-container {
  margin: 50px;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  gap: 180px;
}

.interet {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  margin-top: 50px;
  margin-bottom: 10px;
  justify-content: space-between;
}

.interet img {
  width: 150px;
  height: 150px;
  border-radius: 9px;
  box-shadow: 0px 0px 15px var(--accent-color);
  transform: rotate(45deg);
}

figcaption {
  margin: 45px;
  letter-spacing: 2px;
  font-family: "IBM Plex Mono", serif;
  font-weight: lighter;
  font-size: 20px;
  text-align: center;
}

/* Styles de base pour le footer */
footer {
  text-align: center;
  margin: 40px;
  font-family: "IBM Plex Mono", serif;
  font-weight: lighter;
  font-size: 20px;
}

.footer-content {
  display: flex;
  justify-content: space-around;
  width: 100%;
  max-height: 350px;
  line-height: 35px;
}

.footer-content p {
  margin: 10px 0;
  text-align: center;
}

.footer-content i {
  font-size: 2rem;
}

/* Style du footer de copyright */
.footer-copyright {
  display: flex;
  padding: 8px 0;
  font-family: var(--body-font);
  font-size: 1.2em;
  transition: all 0.3s ease;
  /* Pour une transition douce lors du changement de thème */
  justify-content: center;
}

/* Si vous souhaitez ajuster les liens dans le footer copyright */
.footer-copyright a {
  color: var(--header-bg);
  text-decoration: underline;
}

.footer-copyright a:hover {
  color: var(--background-color);
}

hr {
  border-bottom: var(--accent-color) 5px double;
}

/* Adaptation pour les petits écrans (smartphones) */
@media (max-width: 480px) {
  .footer-copyright {
    font-size: 1em;
    /* Réduction de la taille de police */
    padding: 6px 0;
  }
}
/* ... */

